tests/snapshots/run_wpt_conformance__coreml_slice_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
slice.https.any.js slice float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([54, 79, 31, 86, 67, 212, 125, 75, 164, 85, 201, 84, 36, 206, 249, 84, 19, 84, 46, 83, 167, 84, 131, 196, 87, 56, 7, 85, 21, 79, 160, 84, 169, 212, 212, 206, 103, 212, 122, 83, 79, 211, 253, 84, 238, 200, 85, 81]);
  }

  nodes {
    [sliceOutput] = slice(operand_0, label="", strides=[]);
  }

  outputs { sliceOutput; }
}
