tests/snapshots/run_wpt_conformance__coreml_slice_float16_3D_tensor_with_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
slice.https.any.js slice float16 3D tensor with strides, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: NSGenericException: Failed to add operation to E5 stream. E5RT: Unable to bind buffer to network. (2)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    sliceInput: f16[4, 3, 2];
  }

  nodes {
    [sliceOutput] = slice(sliceInput, label="", strides=[3, 2, 1]);
  }

  outputs { sliceOutput; }
}
