tests/snapshots/run_wpt_conformance__coreml_slice_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slice float16 5D tensor",
    "coreml",
    "PASS",
)
